# Centinelo-Phone

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml  core-build.yml  release.yml  shell-build.yml  windows-installer.yml
core/: BUILD.md  E2E-F1.md  PROTOCOL.md  README.md  run-spike.sh
core/modules/ctrl_json/: CMakeLists.txt  audiotap.c  audiotap.h  cmd.c  cmd.h  ctrl_json.c  dialog_info.c  dialog_info.h  pathsafe.c  pathsafe.h  wav_writer.c  wav_writer.h
core/modules/ctrl_json/test/: CMakeLists.txt  test_main.c
core/patches/: 0001-re-configurable-sip-ws-path.patch  0002-re-tls-fingerprint-pin.patch  0003-baresip-json-stdout-purity.patch  0004-re-json-stdout-purity.patch  0005-baresip-transfer-subscription-error-event.patch
extension/: content.js  manifest.json  options.html  options.js  sw.js
scripts/: package-official.sh  set-release-version.sh
shell/: E2E.md  PROVISIONING.md  README.md  package-lock.json  package.json
shell/dev/: transcript-mock.html  updater-mock.html
shell/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json  tauri.official.conf.json
shell/src-tauri/capabilities/: console.json  default.json
shell/src-tauri/centinelo-premium-abi/: Cargo.toml
shell/src-tauri/centinelo-premium-abi/src/: abi.rs  capability.rs  lib.rs  panic_guard.rs  paths.rs
shell/src-tauri/icons/: icon.icns
shell/src-tauri/src/: activation.rs  bridge.rs  commands.rs  console.rs  deeplink.rs  e2e.rs  lib.rs  premium.rs  provisioning.rs  settings.rs  sidecar.rs  sync_ext.rs  transcription.rs  tray.rs  updater.rs  url_policy.rs
shell/src-tauri/src/hid/: commands.rs  descriptor.rs  device.rs  led.rs  mapping.rs  mod.rs
shell/src-tauri/tests/fixtures/: mock-transcribe.sh
shell/ui/: index.html
shell/ui/css/: app.css  tokens.css  transcript.css
shell/ui/dev/: transcript-mock.html
shell/ui/js/: app.js  blf-ui.js  blf-ui.test.js  call-availability.js  call-availability.test.js  dom-utils.js  dom-utils.test.js  i18n.js  i18n.test.js  reg-status.js  reg-status.test.js  transcript-panel.js  transcript-panel.test.js  transcription-settings.js  transcription-settings.test.js  updater.js  updater.test.js
src/main/: main.js  preload.js
src/renderer/: common.js  engine.js  index.html  phone.css  settings.html  settings.js  ui.js
test/: smoke.mjs
