[package]
name = "centinelo-shell"
version = "2.0.0"
description = "Centinelo Phone 2.0 desktop shell (Tauri) - drives the core/ baresip sidecar"
authors = ["Felix Gonzalez"]
license = "MIT"
repository = "https://github.com/fegone/Centinelo-Phone"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2"
argon2 = { version = "0.5", features = ["std"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tiny_http = "0.12"
form_urlencoded = "1"
getrandom = "0.2"
hex = "0.4"
url = "2"
percent-encoding = "2"
